k8s/validating-admission-webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validating.quarkus.example.com"
  annotations:
    cert-manager.io/inject-ca-from: default/simples-adimission-webhook
webhooks:
  - name: "validating.quarkus.example.com"
    rules:
      - apiGroups:   ["networking.k8s.io"]
        apiVersions: ["v1"]
        operations:  ["DELETE"]
        resources:   ["ingresses"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "default"
        name: "simples-adimission-webhook"
        path: "/validate"
        port: 443

    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
